# git-worktree-pro

./: Cargo.toml  README.md  dist-workspace.toml
src/: config.rs  date.rs  diff.rs  dotfiles.rs  git.rs  list.rs  main.rs  navigate.rs  notes.rs  ops.rs  prompt.rs  sideload.rs  slug.rs  status.rs  sync.rs  worktree.rs
