[package]
name = "git-worktree-pro"
version = "0.1.2"
edition = "2021"
description = "A comprehensive git worktree management toolkit"
license = "MIT"
repository = "https://github.com/gndps/git-worktree-pro"
homepage = "https://github.com/gndps/git-worktree-pro"

[[bin]]
name = "gwtp"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
figlet-rs = "0.1"

[profile.release]
strip = true
lto = true
codegen-units = 1

[profile.dist]
inherits = "release"
lto = "thin"
