[package]
name = "git-worktree-pro"
version = "0.2.4"
edition = "2021"
description = "A comprehensive git worktree management toolkit"
license = "MIT"
repository = "https://github.com/gndps/git-worktree-pro"
homepage = "https://github.com/gndps/git-worktree-pro"

[[bin]]
name = "gwtp"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
figlet-rs = "0.1"
termtree = "0.5"
filetime = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ignore = "0.4"
blake3 = "1"
rayon = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1

[profile.dist]
inherits = "release"
lto = "thin"
